update error responses & swagger file
